trunk/tests/kiama/negative/name_errors/L1/5_var2.ob
MODULE varname;

VAR
    avar4 : INTEGER;
    avar4 : INTEGER;

END varname.
